build: 把 target=Java 8 变成真闸门，退回 11 个文件里的 9+ API
-source/-target 1.8 不限制 API（JDK 25 上 Map.of 照样编过），所以加按 JDK 激活的
jdk9-plus-release-gate 用 --release 8；JDK 8 的 javac 没有 --release，故不能写成常量。
250（JDK 1.8.0_362 + Maven 3.6.0）全 reactor 实测 346 例、Skipped 0。